fix native build